Fixes bug where featured image was getting stretched on most recent blog post tile

--- a/wp-content/plugins/kcls-recent-news/src/style.scss
+++ b/wp-content/plugins/kcls-recent-news/src/style.scss
@@ -47,6 +47,7 @@
 	}
 	img {
 		max-width: 100%;
+		height: auto;
 		border-radius: 15px;
 	}
 }
